打包问题修复

--- a/webdao/pom.xml
+++ b/webdao/pom.xml
@@ -11,6 +11,7 @@
 
     <artifactId>web-dao</artifactId>
     <version>${xh-ashin-webdao.version}</version>
+    <packaging>jar</packaging>
     <dependencies>
         <dependency>
             <artifactId>web-api</artifactId>
