--- a/webapi/pom.xml
+++ b/webapi/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>web-api</artifactId>
     <version>${xh-ashin-webapi.version}</version>
+    <packaging>jar</packaging>
 
 
 </project>
